# distributed-process-raft

./: .gitignore  LICENSE  README.md  distributed-process-raft.cabal  peers  run.sh  stack.yaml
example/: RaftNode.hs
src/Control/Distributed/Process/: Raft.hs  Reminder.hs
src/Control/Distributed/Process/Raft/: AppendEntriesRpc.hs  ClientRpc.hs  Reminder.hs  RequestVoteRpc.hs  Roles.hs  Types.hs  Utils.hs
