name:                distributed-process-raft
version:             0.0.0.1
synopsis:            Simplistic Raft consensus implementation for distributed-process
description:         Please see README.md
homepage:            https://github.com/esmolanka/distributed-process-raft#readme
license:             BSD3
license-file:        LICENSE
author:              Eugene Smolanka
maintainer:          esmolanka@gmail.com
copyright:           Eugene Smolanka
category:            Distributed
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  ghc-options:         -Wall -fno-warn-name-shadowing -fno-warn-unused-do-bind
  exposed-modules:     Control.Distributed.Process.Raft
                       Control.Distributed.Process.Reminder
  other-modules:       Control.Distributed.Process.Raft.Types
                       Control.Distributed.Process.Raft.Roles
                       Control.Distributed.Process.Raft.AppendEntriesRpc
                       Control.Distributed.Process.Raft.RequestVoteRpc
                       Control.Distributed.Process.Raft.ClientRpc
                       Control.Distributed.Process.Raft.Utils

  default-language:    Haskell2010
  build-depends:
    base >= 4.7 && < 5, distributed-process, containers, random, mtl,
    transformers, time, binary, stm


executable raft-test-node
  hs-source-dirs:      example
  main-is:             RaftNode.hs
  ghc-options:         -threaded -rtsopts -Wall
                       -fno-warn-name-shadowing -fno-warn-unused-do-bind
  default-language:    Haskell2010
  build-depends:
    base >= 4.7 && < 5, distributed-process, distributed-process-raft,
    network-transport, network-transport-tcp, containers,
    optparse-applicative, bytestring, hashable
